fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ html, body {
 
 #conditions {
     font-size: calc(1em + 1vw);
+    padding-bottom: 100px
 }
 
 #temperature {
@@ -113,10 +114,9 @@ html, body {
     #fiveday {
         margin-top: 10px;
         width: 100vw;
-        margin-right: 10vw;
         font-size: calc(.75em + 1.25vw);
     }
     body{
-        max-width: 100vw;
+        width: 100%;
     }
 }
